feat(event): add controllers, DTOs, repository, and mapper